--- a/templates/index.html
+++ b/templates/index.html
@@ -10,8 +10,7 @@
 	<!-- navigation bar -->
 	<ul>
 		<li><a href="{{ url_for('index')}}">Home</a></li>
-		<li><a href="{{ url_for('login')}}">Login</a></li>
-		<li><a href="{{ url_for('show_user')}}">User credentials</a></li>
+		<li><a href="{{ url_for('login')}}">Order</a></li>
 	</ul>
 
 	<h1>Welcome to the Index Page!</h1>
